--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:value=".ui.HomeActivity" />
         </activity>
         <activity android:name=".ui.PointOfInterestDetailActivity"
+            android:theme="@style/PoiDetailTheme"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
